# shoe-tracker

./: .gitignore  CLAUDE.md  README.md  loop_prompt.md  plan.md  pyproject.toml  shoe_tracker.db
.github/: dependabot.yml
.github/workflows/: codeql.yml  health.yml  scrape.yml  test.yml
config/: rotation.yaml
docs/: adding_retailers.md  data.json  index.html  mapping_review.md  runbook.md
docs/retailers/: holabird.md  jackrabbit.md  road_runner_sports.md  running_warehouse.md  skipped.md
scripts/: adapter_health.py  notify_workflow_failure.py  render_dashboard.py
src/shoe_tracker/: cli.py  config.py  dashboard.py  evaluator.py  mapping.py  models.py
src/shoe_tracker/adapters/: __init__.py  base.py  holabird.py  http.py  jackrabbit.py  road_runner_sports.py  running_warehouse.py
src/shoe_tracker/db/: __init__.py
src/shoe_tracker/db/migrations/: 001_initial.sql
src/shoe_tracker/notifiers/: __init__.py  base.py  email.py
src/shoe_tracker/templates/: dashboard.html
tests/: test_adapter_health.py  test_adapters_base.py  test_cli.py  test_cli_evaluate.py  test_cli_mapping.py  test_config.py  test_dashboard.py  test_db.py  test_evaluator.py  test_holabird.py  test_http.py  test_jackrabbit.py  test_mapping.py  test_models.py  test_notifier_email.py  test_notify_workflow_failure.py  test_render_dashboard.py  test_road_runner_sports.py  test_running_warehouse.py
tests/fixtures/holabird/: product_glycerin_22_mens_sale.html  product_novablast_mens_clearance.html  product_novablast_mens_gravel.html  search_novablast.html
tests/fixtures/jackrabbit/: product_novablast_mens.html  search_novablast.html
tests/fixtures/road_runner_sports/: product_novablast_mens.html  search_novablast.html
tests/fixtures/running_warehouse/: product_anb5m1.html  product_anb5m3.html  product_oos_synthetic.html  search_mens_novablast.html
